# dbf_loader

./: .gitignore  Makefile  main.py  pyproject.toml
src/dbf_loader/: __init__.py  cli.py  converter.py
tests/: test_converter.py
